[package]
name = "saltwater-core"
version = "0.1.0"
authors = ["Joshua Nelson <jyn514@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
# TODO: 🚫 too many dependencies 🚫
codespan = { version = ">=0.9.5", default-features = false }
hexponent = "0.3"
lasso = "0.2"
lazy_static = "1"
shared_str = "0.1.1"

[lib]
path = "lib.rs"
